# znake

./: .gitignore  CMakeLists.txt  README.md
data/: config.json
data/maps/: box.json  labyrinth.json  tunnel.json
docs/: README.md
include/: assets.hpp  game.hpp
include/ui/: button.hpp  input.hpp  option.hpp  scaled.hpp  textinput.hpp
src/: assets.cpp  game.cpp  main.cpp
src/ui/: button.cpp  input.cpp  option.cpp  scaled.cpp  textinput.cpp
